--- a/pms/views/aboutus.ejs
+++ b/pms/views/aboutus.ejs
@@ -43,14 +43,14 @@
  
   <nav class="navbar navbar-expand-md navbar-dark  pl-5 fixed-top" style="background-color: rgb(223, 100, 18);">
     <img src="../images/logo.jpeg" class="image-fluid rounded " style="height:80px; width:80px; border-radius: 80px;" />
-    <a href="/" class="navbar-portal" style="text-decoration: none; color:white;margin-left: 2%; font-size:35px;font-family: 'Times New Roman', Times, serif ;font-style: oblique;">Local Grievance Portal <br><h6 style="margin-left:5%; color: black; font: italic;">Sound Your Complaint Louder | Team Jeevanpradaya</h6></a>
+    <a href="/" class="navbar-portal" style="text-decoration: none; color:white;margin-left: 2%; font-size:35px;font-family: 'Times New Roman', Times, serif ;font-style: oblique;"><strong>Local Grievance Portal</strong> <br><h6 style="margin-left:5%; color: black; font: italic;">Sound Your Complaint Louder | Team Jeevanpradaya</h6></a>
     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#tabmenu">
   <span class="navbar-toggler-icon"></span>
 </button>
     <div class="collapse navbar-collapse" id="tabmenu">
 
        
-<ul class="nav nav-tab" style="margin-left: 50%;">
+<ul class="nav nav-tab" style="margin-left: 30%;">
 
 <li class="nav-item "><a href="/linked" class="nav-link " style="color: white; float: right;">Department Linked</a></li>
 
@@ -60,7 +60,7 @@
     </div>
 </nav>
 
-      <div class="bg-image" style="max-width:900px; margin:0 auto ; padding: 10px;">
+      <div class="bg-image" style="max-width:900px; margin:0 auto ; padding: 10px; margin-bottom:300px">
         <div class="container-fluid">
           <div class="row justify-content-center" style="margin-top:15%;  border-radius: 84px 10px 84px 10px;
          ">
@@ -77,107 +77,28 @@
                to clearify your complaints and solve the issue regarding the complaint.This portal will help every individual to solve some little big problem 
                and also to raise your voice against useasy behaviour seen in your area.It is right of every individual to speak up about injustice and this 
                portal will make it easy and possible from anywhere.This will lead us to ideal society. 
-              </p>
+              </p><br><br>
+              <h2 style="color: rgb(18, 121, 14) ;font-style: italic;"><strong>TEAM JEEVANPRADAY</strong></h2>
+              <H3 style="color: rgb(223, 100, 18);font-weight: bolder;font-style: oblique; text-align:left;">Aishwarya Pawar<br>Ashwini Kurkute<br>Vaishnavi Shinde<br>Rupali Zanjad<br>Vrushali Akolkar</H3>
           
               
             </div>
           </div>
         </div>
       </div>
-     
-      <div  id="Team " style="margin-top:40px; background-image: none; ">
-        <!-- Start Team Jumbotron -->
-        <div class="container " style="width: fit-content;margin-left: 450px;">
-            
-            <div class="row mat-10 team">
-                <!-- Start Team Row-->
-                <div class="col-lg-2 col-sm-6 " >
-                    <!-- Start Team 4th Column-->
-                    <div class=" shadow-lg mb-2 ">
-                        <div class="card-body text-center ">
-                          <picture>
-                            <source srcset="" type="image/svg+xml">
-                            <img src="../images/rups.jpg" class="img-fluid img-thumbnail" alt="rups" style="height: 150px;width: 150px;">
-                          </picture>
-                            <h4 class="card-title " style="color: black;">Rupali Zanjad</h4>
 
-                        </div>
-                    </div>
-                    </div>
-                <!-- End Team 1st Column-->
 
-                <div class="col-lg-2 col-sm-6 " >
-                    <!-- Start Team 4th Column-->
-                    <div class=" shadow-lg mb-2 ">
-                        <div class="card-body text-center ">
-                          <picture>
-                            <source srcset="" type="image/svg+xml">
-                            <img src="../images/ash.jpg" class="img-fluid img-thumbnail" alt="ash" style="height: 150px;width: 150px;">
-                          </picture>
-                            <h4 class="card-title " style="color: black;">Ashwini Kurkute</h4>
-
-                        </div>
-                    </div>
-                    </div>
-                <!-- End Team 2nd Column-->
-
-                <div class="col-lg-2 col-sm-3 " >
-                    <!-- Start Team 4th Column-->
-                    <div class=" shadow-lg mb-2 ">
-                        <div class="card-body text-center ">
-                          <picture>
-                            <source srcset="" type="image/svg+xml">
-                            <img src="../images/vish.jpg" class="img-fluid img-thumbnail" alt="vish" style="height: 150px;width: 150px;">
-                          </picture>
-                            <h4 class="card-title " style="color: black">Vaishnavi Shinde</h4>
-
-                        </div>
-                    </div>
-                    </div>
-                <!-- End Team 3rd Column-->
-
-                <div class="col-lg-2 col-sm-6 " >
-                    <!-- Start Team 4th Column-->
-                    <div class=" shadow-lg mb-2 ">
-                        <div class="card-body text-center ">
-                          <picture>
-                            <source srcset="" type="image/svg+xml">
-                            <img src="../images/aish.jpg" class="img-fluid img-thumbnail" alt="aish" style="height: 150px;width: 150px;">
-                          </picture>
-                            <h4 class="card-title " style="color: black;">Aishwarya Pawar</h4>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-sm-6 ">
-                    <!-- Start Team 4th Column-->
-                    <div class=" shadow-lg mb-2 " >
-                        <div class="card-body text-center >
-                          <picture>
-                            <source srcset="" type="image/svg+xml">
-                            <img src="../images/vrush.jpg" class="img-fluid img-thumbnail" alt="vrush" style="height: 150px;width: 150px;">
-                          </picture>
-                            <h4 class="card-title " style="color: black;">Vrushali Akolkar</h5>
-
-                        </div>
-                    </div>
-                </div> 
-            </div>
-        </div>
-      </div>
       <div class="footer">
         <span>Follow Us: </span>
-                         <a href="http://www.facebook.com/Rupali Zanjad " target="_blank "><img src="fb.png " alt="facebook " style="height:20px; width:20px; "> </img>
-                         </a>
-                         <a href="https://twitter.com/Rupali zanjad " target="_blank "><img src="twit.png " alt="twitter " style="height:20px; width:20px; "> </img>
-                         </a>
-                         <a href="https://www.youtube.com/blood donation " target="_blank "><img src="youtube.png " alt="you tube " style="height:20px; width:20px; "> </img>
-                         <a href="" target="_blank "><img src="insta.png" alt="you tube " style="height:20px; width:20px; "> </img>
-                         <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p>
-     </div>
-     
- 
-
+        <a href="https://www.facebook.com/team.jeevanpradaya/ " target="_blank "><img src="../images/fb.png " alt="facebook " style="height:20px; width:20px; "> </img>
+        </a>
+        <a href="https://twitter.com/jeevanpradaya?s=09" target="_blank "><img src="../images/twit.png " alt="twitter " style="height:20px; width:20px; "> </img>
+        </a>
+        <a href="https://instagram.com/team_jeevanpradaya?igshid=1jqj5xv3a1yq9" target="_blank "><img src="../images/insta.png" alt="you tube " style="height:20px; width:20px; "> </img>
+            <a href="http://localgrievance.in:4000/aboutus">
+                <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p>
+            </a>
+    </div>
 
 
 
