--- a/pms/views/application.ejs
+++ b/pms/views/application.ejs
@@ -56,7 +56,7 @@
   <div class="container-fluid navigation">
     <div class="navbar-header">
       <img src="../images/logo.jpeg" class="rounded" alt="Cinque Terre" style="width: 10%;height:10%;">
-      <a class="navbar-brand " style="color:white; margin-left: 40px; font-weight:200;font-style: oblique;" href="#">Local Grievance Portal 
+      <a class="navbar-brand " style="color:white; margin-left: 30px; font-weight:200;font-style: oblique;" href="#">Local Grievance Portal 
       <h6 style=" color:black ; font-style: italic;">Sound Your Complaint Louder | Team Jeevanpradaya</h6></a>
     </div>
     <ul class="nav nav-tab">
@@ -70,9 +70,9 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-4 col-sm-4 col-xm-12"></div>
-    <div class="col-md-4 col-sm-4 col-xm-12">
-       <form  id="compform"  method="POST" action="/application"  autocomplete="off" style="margin-top:150px; border:2px solid grey; margin-bottom: 20px;">
+    <div class="col-md-3 col-sm-3 col-xm-12"></div>
+    <div class="col-md-6 col-sm-6 col-xm-12">
+       <form  id="compform"  method="POST" action="/application"  autocomplete="off" style="margin-top:200px; border:2px solid grey; margin-bottom: 200px;">
        <input type="hidden" name="id"value="<%= record._id %>">
          <h1 style="margin-bottom: 40px; text-align: center;">Application</h1>
            <div class="form-group a">
@@ -133,22 +133,24 @@
       
 
       </div>
-     <div class="col-md-4 col-sm-4 col-xm-12"></div>
+     <div class="col-md-3 col-sm-3 col-xm-12"></div>
      </div>
 </div>
 
 
 
-
 <div class="footer">
   <span>Follow Us: </span>
-                   <a href="https://www.facebook.com/team.jeevanpradaya/ " target="_blank "><img src="../images/fb.png " alt="facebook " style="height:20px; width:20px; "> </img>
-                   </a>
-                   <a href="https://twitter.com/jeevanpradaya?s=09" target="_blank "><img src="../images/twit.png " alt="twitter " style="height:20px; width:20px; "> </img>
-                   </a>
-                   <a href="https://instagram.com/team_jeevanpradaya?igshid=1jqj5xv3a1yq9" target="_blank "><img src="../images/insta.png" alt="you tube " style="height:20px; width:20px; "> </img>
-                   <a href="aboutus.html"><p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p></a>
-</div>    <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p></a>
+  <a href="https://www.facebook.com/team.jeevanpradaya/ " target="_blank "><img src="../images/fb.png " alt="facebook " style="height:20px; width:20px; "> </img>
+  </a>
+  <a href="https://twitter.com/jeevanpradaya?s=09" target="_blank "><img src="../images/twit.png " alt="twitter " style="height:20px; width:20px; "> </img>
+  </a>
+  <a href="https://instagram.com/team_jeevanpradaya?igshid=1jqj5xv3a1yq9" target="_blank "><img src="../images/insta.png" alt="you tube " style="height:20px; width:20px; "> </img>
+      <a href="http://localgrievance.in:4000/aboutus">
+          <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p>
+      </a>
+</div>
+
 </div>
 
 
