--- a/pms/views/desc.ejs
+++ b/pms/views/desc.ejs
@@ -82,7 +82,7 @@
     </div>
 </nav>
 
-<div style="max-width: 1000px;margin-left: 30%; margin-top: 200px ; padding: 10px;">
+<div style="max-width: 1000px;margin-left: 30%; margin-top: 200px ; margin-bottom: 200px ;padding: 10px;">
     <div class="container-fluid">
         <div class="row justify-content-center" style="margin-top:15px">
             <div class="col-md-12 thumb">
@@ -95,12 +95,15 @@
                         <label class="form-check-label" for="gridCheck">
                           I accept my grievance is not from above type..  </label>
                     </div>
+
                 </form>
+                <a type="submit" class="btn btn-lg btn-success next" href="/complaintform">NEXT</a>
             </div>
         </div>
     </div>
 </div>
-<a type="submit" class="btn btn-lg btn-success next" href="/complaintform">NEXT</a>
+
+
 <div class="footer">
     <span>Follow Us: </span>
     <a href="https://www.facebook.com/team.jeevanpradaya/ " target="_blank "><img src="../images/fb.png " alt="facebook " style="height:20px; width:20px; "> </img>
@@ -108,12 +111,11 @@
     <a href="https://twitter.com/jeevanpradaya?s=09" target="_blank "><img src="../images/twit.png " alt="twitter " style="height:20px; width:20px; "> </img>
     </a>
     <a href="https://instagram.com/team_jeevanpradaya?igshid=1jqj5xv3a1yq9" target="_blank "><img src="../images/insta.png" alt="you tube " style="height:20px; width:20px; "> </img>
-        <a href="aboutus.html">
+        <a href="http://localgrievance.in:4000/aboutus">
             <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p>
         </a>
 </div>
-<p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p>
-</a>
+
 </div>
 <div class="container-fluid">
     <script src="js/jquery.js"></script>
