--- a/pms/views/search.ejs
+++ b/pms/views/search.ejs
@@ -51,54 +51,26 @@
    <title>Local Grievance | Home</title>
 </head>
 
+    <body>   
+      <nav class="navbar navbar-expand-md navbar-dark  pl-5 fixed-top" style="background-color: rgb(223, 100, 18);">
+        <img src="../images/logo.jpeg" class="image-fluid rounded " style="height:80px; width:80px; border-radius: 80px;" />
+        <a href="/" class="navbar-portal" style="text-decoration: none; color:white;margin-left: 2%; font-size:35px;font-family: 'Times New Roman', Times, serif ;font-style: oblique;">Local Grievance Portal <br><h6 style="margin-left:5%; color: black; font: italic;">Sound Your Complaint Louder | Team Jeevanpradaya</h6></a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#tabmenu">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+        <div class="collapse navbar-collapse" id="tabmenu">
     
-      <nav class="navbar navbar-expand-lg navbar fixed-top " style="background-color: rgb(32, 30, 30);">
-        <div class="container-fluid navigation">
-          <div class="navbar-header">
-            <img src="logo.jpeg" class="rounded" alt="Cinque Terre" style="width: 10%;height:10%;">
-            <a class="navbar-brand " style="color:rgb(44, 123, 241); margin-left: 40px; font-weight:200;font-style: oblique;" href="#">Local Grievance Portal 
-            <h6 style=" color:white ; font-style: italic;">Sound Your Complaint Louder | Team Jeevanpradaya</h6></a>
-          </div>
-          <ul class="nav nav-tab">
-            <button class="btn btn-outline-primary navbar-btn" style="margin-left: 20px;">Home
-            <a href="/index"></a></button>
-          
-            <button class="btn btn-outline-primary navbar-item dropdown" style="margin-left: 20px;">Department Linked
-            <a href="/linked"></a></button>
-            
-            
-              <button class="btn btn-outline-primary navbar-btn" style="margin-left: 20px;margin-right: 20px;"  >
-                <a href="/usersignup"> Signup</a>
-        </button>
-
-        
-        <div class="dropdown">
-          <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Log in
-          <span class="caret"></span></button>
-          <ul class="dropdown-menu">
-            <li><a data-toggle="modal"data-target="#u">User</a></li>
-            <li><a data-toggle="modal"data-target="#d">Department</a></li>
-            <li><a data-toggle="modal" data-target="#a">Admin</adata-toggle="modal"></li>
-          </ul>
+           
+    <ul class="nav nav-tab" style="margin-left: 50%;">
+      <li class="nav-item " style="margin-left: 100%;"><a href="/adminpage" class="nav-link " style="color: white;">Back</a></li>
+    </ul>
+    
+    
         </div>
-
-
-       
-        
-          
-
-        
-            
-      
-            
-              <a class="btn btn-outline-primary navbar-btn" style="margin-left: 20px;"href="/aboutus">About Us</a>
-            
-          </ul>
-        </div>
-      </nav>
+    </nav>
       
 <div>
-      <form  method="POST" action="/back" autocomplete="off" >
+      <form  method="POST" action="/back" autocomplete="off" style="margin-bottom: 150px;">
            
         <fieldset class="writers" >
         <h3 class="text-center" style="color:rgb(44, 123, 241); ;font-family: fantasy;font-weight: 900;">  Profile</h3><hr/>
@@ -152,18 +124,17 @@
   
 
 
-
-  <div class="footer">
-    <span>Follow Us: </span>
-                     <a href="http://www.facebook.com/Rupali Zanjad " target="_blank "><img src="fb.png " alt="facebook " style="height:20px; width:20px; "> </img>
-                     </a>
-                     <a href="https://twitter.com/Rupali zanjad " target="_blank "><img src="twit.png " alt="twitter " style="height:20px; width:20px; "> </img>
-                     </a>
-                     <a href="https://www.youtube.com/blood donation " target="_blank "><img src="youtube.png " alt="you tube " style="height:20px; width:20px; "> </img>
-                     <a href="" target="_blank "><img src="insta.png" alt="you tube " style="height:20px; width:20px; "> </img>
-                     <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p>
- </div>
- 
+<div class="footer">
+  <span>Follow Us: </span>
+  <a href="https://www.facebook.com/team.jeevanpradaya/ " target="_blank "><img src="../images/fb.png " alt="facebook " style="height:20px; width:20px; "> </img>
+  </a>
+  <a href="https://twitter.com/jeevanpradaya?s=09" target="_blank "><img src="../images/twit.png " alt="twitter " style="height:20px; width:20px; "> </img>
+  </a>
+  <a href="https://instagram.com/team_jeevanpradaya?igshid=1jqj5xv3a1yq9" target="_blank "><img src="../images/insta.png" alt="you tube " style="height:20px; width:20px; "> </img>
+      <a href="http://localgrievance.in:4000/aboutus">
+          <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p>
+      </a>
+</div>
 
   
 
