--- a/pms/views/adminpage.ejs
+++ b/pms/views/adminpage.ejs
@@ -10,7 +10,7 @@
                 }
                 .previous{text-align: right;}
                .next{text-align: right ;margin-left:100px;}
-         .thumb{width :50%; float: left; height:150px ;margin-top:0px; -webkit-box-shadow: 3px 3px 33px 9px rgb(32,33,33);
+         .thumb{width :50%; float: left; height:150px ;margin-top:50px; -webkit-box-shadow: 3px 3px 33px 9px rgb(32,33,33);
                 -moz-box-shadow: 3px 3px 33px 9px rgba(32,33,33);
                 box-shadow: 3px 3px 33px 9px rgba(32,33,33);
                 border-radius: 63px 0px 63px 0px;
@@ -41,7 +41,7 @@ margin-left: 350px;
   <div class="container-fluid navigation">
     <div class="navbar-header">
       <img src="../images/logo.jpeg" class="rounded" alt="Cinque Terre" style="width: 10%;height:10%;">
-      <a class="navbar-brand " style="color:white; margin-left: 40px; font-weight:200;font-style: oblique;" href="#">Local Grievance Portal
+      <a class="navbar-brand " style="color:white; margin-left: 30px; font-weight:200;font-style: oblique;" href="#">Local Grievance Portal
       <h6 style=" color:rgb(18, 121, 14) ; font-style: italic;">Sound Your Complaint Louder | Team Jeevanpradaya</h6></a>
     </div>
     <ul class="nav nav-tab">
@@ -53,17 +53,15 @@ margin-left: 350px;
         </form>
       </li>
       <li class="nav-item"><a href="/departmentsignup" class="nav-link" style="color: white; margin-top: 20px;">Add Department</a> </li>
-     
-    
       <li class="nav-item"><a href="/logout" class="nav-link" style="color: white; margin-top: 20px;">Logout</a> </li>
-      <li class="nav-item" style="float: right;"><a href=" #" class="nav-link">Logged in as: <% if(loginUser) { %> <%= loginUser %> <% } %> </a></li>
+      <li class="nav-item" style="float: right;"><a href=" #" class="nav-link" style="color: white; margin-top: 20px;">Logged in as: <% if(loginUser) { %> <%= loginUser %> <% } %> </a></li>
 
     </ul>
   </div>
 </nav>
       <div style="max-width: 1000px; margin:0 auto ; padding: 10px;">
         <div class="container-fluid">
-          <div class="row justify-content-center" style="margin-top:150px">
+          <div class="row justify-content-center" style="margin-top:200px">
             <div class="col-md-12 thumb">
                 <p style="text-align: center;color: rgb(0, 0, 0);">List of subjects/topics which can not be treated as grievance. <br></p>
                         <p style="text-align: left; color: rgb(0, 0, 0);">RTI Matters <br>
@@ -76,7 +74,7 @@ margin-left: 350px;
         </div>
       </div>
       <div>
-      <table class="table table-dark table-bordered" style="margin-left:270px; margin-top: 70px ;width:70% ;">
+      <table class="table table-dark table-bordered" style="margin-left:190px; margin-top: 70px;margin-bottom: 150px ;width:70% ;">
         <thead>
           <tr>
             <th scope="col">ref_no</th>
@@ -93,7 +91,7 @@ margin-left: 350px;
             <td><div class="btn-group-vertical">
               <form method="post"action="/forward/<%= row._id %>">
               <button type="submit" href="/adminpage">Forward</button>
-              </form>
+              </form><br>
               <form method="post"action="/delete/<%= row._id %>">
                 <button type="submit"href="/adminpage">Reject</button>
                 </form>
@@ -102,15 +100,19 @@ margin-left: 350px;
           <% }) %>
           </table>
       </div>
-        <div class="footer">
-          <span>Follow Us: </span>
-                           <a href="https://www.facebook.com/team.jeevanpradaya/ " target="_blank "><img src="fb.png " alt="facebook " style="height:20px; width:20px; "> </img>
-                           </a>
-                           <a href="https://twitter.com/jeevanpradaya?s=09" target="_blank "><img src="twit.png " alt="twitter " style="height:20px; width:20px; "> </img>
-                           </a>
-                           <a href="https://instagram.com/team_jeevanpradaya?igshid=1jqj5xv3a1yq9" target="_blank "><img src="insta.png" alt="you tube " style="height:20px; width:20px; "> </img>
-                           <a href="aboutus.html"><p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p></a>
-       </div>    <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p></a>
+       
+      <div class="footer">
+        <span>Follow Us: </span>
+        <a href="https://www.facebook.com/team.jeevanpradaya/ " target="_blank "><img src="../images/fb.png " alt="facebook " style="height:20px; width:20px; "> </img>
+        </a>
+        <a href="https://twitter.com/jeevanpradaya?s=09" target="_blank "><img src="../images/twit.png " alt="twitter " style="height:20px; width:20px; "> </img>
+        </a>
+        <a href="https://instagram.com/team_jeevanpradaya?igshid=1jqj5xv3a1yq9" target="_blank "><img src="../images/insta.png" alt="you tube " style="height:20px; width:20px; "> </img>
+            <a href="http://localgrievance.in:4000/aboutus">
+                <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p>
+            </a>
+    </div>
+
       </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
