--- a/pms/views/complaintform.ejs
+++ b/pms/views/complaintform.ejs
@@ -73,7 +73,7 @@
         <div class="collapse navbar-collapse" id="tabmenu">
 
 
-            <ul class="nav nav-tab" style="margin-left: 25%;">
+            <ul class="nav nav-tab" style="margin-left: 20%;">
 
                 <li class="nav-item "><a href="/userpage" class="nav-link " style="color: white; float: right;">Back</a></li>
                 <li class="nav-item" style="float: right;"><a href=" #" class="nav-link" style="color: white;">Logged in as: <% if(loginUser) { %> <%= loginUser %> <% } %> </a></li>
@@ -87,8 +87,8 @@
 
     <div class="container-fluid" style="margin-top: 100px;">
         <div class="row">
-            <div class="col-md-4 col-sm-5 col-xm-12"></div>
-            <div class="col-md-4 col-sm-5 col-xm-12">
+            <div class="col-md-3 col-sm-3 col-xm-12"></div>
+            <div class="col-md-6 col-sm-6 col-xm-12">
                 <form id="compform" action="/complaintform" method="POST" autocomplete="off">
                     <h1 style="margin-bottom: 40px;">Complaint Form</h1>
                     <div class="form-group" style="margin-top: 4px;">
@@ -212,6 +212,7 @@
             </div>
         </div>
         <!-- Button trigger modal -->
+    
         <div class="footer">
             <span>Follow Us: </span>
             <a href="https://www.facebook.com/team.jeevanpradaya/ " target="_blank "><img src="../images/fb.png " alt="facebook " style="height:20px; width:20px; "> </img>
@@ -219,12 +220,11 @@
             <a href="https://twitter.com/jeevanpradaya?s=09" target="_blank "><img src="../images/twit.png " alt="twitter " style="height:20px; width:20px; "> </img>
             </a>
             <a href="https://instagram.com/team_jeevanpradaya?igshid=1jqj5xv3a1yq9" target="_blank "><img src="../images/insta.png" alt="you tube " style="height:20px; width:20px; "> </img>
-                <a href="aboutus.html">
+                <a href="http://localgrievance.in:4000/aboutus">
                     <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p>
                 </a>
         </div>
-        <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p>
-        </a>
+    
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
