--- a/pms/views/departmentpage.ejs
+++ b/pms/views/departmentpage.ejs
@@ -43,7 +43,7 @@
   </div>
 </nav>
 <div>
-  <table class="table table-dark table-bordered" style="margin-left:270px; margin-top: 300px ;width:70% ;">
+  <table class="table table-dark table-bordered" style="margin-left:190px; margin-top: 300px ;width:70% ;">
     <thead>
       <tr>
         <th scope="col">ref_no</th>
@@ -67,15 +67,18 @@
       </table>
     </div>
     
-<div class="footer">
-  <span>Follow Us: </span>
-                   <a href="https://www.facebook.com/team.jeevanpradaya/ " target="_blank "><img src="../images/fb.png " alt="facebook " style="height:20px; width:20px; "> </img>
-                   </a>
-                   <a href="https://twitter.com/jeevanpradaya?s=09" target="_blank "><img src="../images/twit.png " alt="twitter " style="height:20px; width:20px; "> </img>
-                   </a>
-                   <a href="https://instagram.com/team_jeevanpradaya?igshid=1jqj5xv3a1yq9" target="_blank "><img src="../images/insta.png" alt="you tube " style="height:20px; width:20px; "> </img>
-                   <a href="aboutus.html"><p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p></a>
-</div>    <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p></a>
+
+    <div class="footer">
+      <span>Follow Us: </span>
+      <a href="https://www.facebook.com/team.jeevanpradaya/ " target="_blank "><img src="../images/fb.png " alt="facebook " style="height:20px; width:20px; "> </img>
+      </a>
+      <a href="https://twitter.com/jeevanpradaya?s=09" target="_blank "><img src="../images/twit.png " alt="twitter " style="height:20px; width:20px; "> </img>
+      </a>
+      <a href="https://instagram.com/team_jeevanpradaya?igshid=1jqj5xv3a1yq9" target="_blank "><img src="../images/insta.png" alt="you tube " style="height:20px; width:20px; "> </img>
+          <a href="http://localgrievance.in:4000/aboutus">
+              <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p>
+          </a>
+  </div>
 </div>
 
 
