--- a/pms/views/index.ejs
+++ b/pms/views/index.ejs
@@ -288,16 +288,11 @@
   </button>
             <div class="collapse navbar-collapse" id="tabmenu">
 
-                <ul class="navbar-nav pl-5 custom-nav" style="margin-left:15%; font-size:20px; color:rgb(8, 8, 7);">
+                <ul class="navbar-nav pl-5 custom-nav" style="margin-left:8%; font-size:20px; color:rgb(8, 8, 7);">
 
 
                     <li class="nav-item"><a href="/" class="nav-link" style="color: white;" aria-disabled>Home</a> </li>
-                    <li class="nav-item">
-                        <a href="/login" class="nav-link" style="color: white;">
-                            <% if(!loginUser) { %> Login
-                                <% } %>
-                        </a>
-                    </li>
+                    <li class="nav-item"><a href="/login" class="nav-link" style="color: white;">Login</a></li>
                     <li class="nav-item"><a href="/linked" class="nav-link" style="color: white;">Department Linked</a></li>
                     <li class="nav-item"><a href="/usersignup" class="nav-link" style="color: white;">Register</a></li>
                     <li class="nav-item "><a href="/aboutus" class="nav-link " style="color: white;">About us</a></li>
@@ -364,14 +359,14 @@
     </div>
     </div>
     <div class="wrapper" style="margin-top: 10px;">
-        <a type="button" href="/login" class="btn btn-primary btn-lg" style="margin-right: 10px;">New Complaint</a>
+        <a type="button" href="/login" class="btn btn-primary btn-lg" style="margin-right: 0px;">New Complaint</a>
         <a type="button" href="/login" class="btn btn-primary btn-lg" onclick="window.location.href='#loguser';">Status of Complaint</a>
 
     </div>
 
 
 
-    <div class="container " style="padding: 30px; margin-left:20%; margin-bottom: 30px;">
+    <div class="container " style="padding: 30px; margin-left:13%; margin-bottom: 30px;">
         <div class="row no-gutters">
             <div class="row ">
                 <v class="col-40 ">
@@ -403,12 +398,11 @@
         <a href="https://twitter.com/jeevanpradaya?s=09" target="_blank "><img src="../images/twit.png " alt="twitter " style="height:20px; width:20px; "> </img>
         </a>
         <a href="https://instagram.com/team_jeevanpradaya?igshid=1jqj5xv3a1yq9" target="_blank "><img src="../images/insta.png" alt="you tube " style="height:20px; width:20px; "> </img>
-            <a href="aboutus.html">
+            <a href="http://localgrievance.in:4000/aboutus">
                 <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p>
             </a>
     </div>
-    <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p>
-    </a>
+
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
