--- a/pms/views/linked.ejs
+++ b/pms/views/linked.ejs
@@ -41,7 +41,7 @@ margin-left: 350px;
   <div class="container-fluid navigation">
     <div class="navbar-header">
       <img src="../images/logo.jpeg" class="rounded" alt="Cinque Terre" style="width: 10%;height:10%;">
-      <a class="navbar-brand " style="color:white; margin-left: 40px; font-weight:200;font-style: oblique;" href="#">Local Grievance Portal
+      <a class="navbar-brand " style="color:white; margin-left: 40px; font-weight:200;font-style: oblique;" href="#"><strong>Local Grievance Portal</strong> 
       <h6 style=" color:rgb(18, 121, 14) ; font-style: italic;">Sound Your Complaint Louder | Team Jeevanpradaya</h6></a>
     </div>
     <ul class="nav nav-tab">
@@ -54,7 +54,7 @@ margin-left: 350px;
 </nav>
                
       <div>
-      <table class="table table-dark table-bordered" style="margin-left:270px; margin-top: 200px ;width:70% ;">
+      <table class="table table-dark table-bordered" style="margin-left:190px; margin-top: 200px ;width:70% ;">
         <thead>
           <tr>
             <th scope="col">Department name</th>
@@ -74,15 +74,18 @@ margin-left: 350px;
           </table>
       </div>
      
-<div class="footer">
-  <span>Follow Us: </span>
-                   <a href="https://www.facebook.com/team.jeevanpradaya/ " target="_blank "><img src="../images/fb.png " alt="facebook " style="height:20px; width:20px; "> </img>
-                   </a>
-                   <a href="https://twitter.com/jeevanpradaya?s=09" target="_blank "><img src="../images/twit.png " alt="twitter " style="height:20px; width:20px; "> </img>
-                   </a>
-                   <a href="https://instagram.com/team_jeevanpradaya?igshid=1jqj5xv3a1yq9" target="_blank "><img src="../images/insta.png" alt="you tube " style="height:20px; width:20px; "> </img>
-                   <a href="aboutus.html"><p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p></a>
-</div>    <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p></a>
+      <div class="footer">
+        <span>Follow Us: </span>
+        <a href="https://www.facebook.com/team.jeevanpradaya/ " target="_blank "><img src="../images/fb.png " alt="facebook " style="height:20px; width:20px; "> </img>
+        </a>
+        <a href="https://twitter.com/jeevanpradaya?s=09" target="_blank "><img src="../images/twit.png " alt="twitter " style="height:20px; width:20px; "> </img>
+        </a>
+        <a href="https://instagram.com/team_jeevanpradaya?igshid=1jqj5xv3a1yq9" target="_blank "><img src="../images/insta.png" alt="you tube " style="height:20px; width:20px; "> </img>
+            <a href="http://localgrievance.in:4000/aboutus">
+                <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p>
+            </a>
+    </div>
+
 </div>
 
 
