--- a/pms/views/userpage.ejs
+++ b/pms/views/userpage.ejs
@@ -74,6 +74,7 @@
     </form>
 </div>
 </div>
+
 <div class="footer">
     <span>Follow Us: </span>
     <a href="https://www.facebook.com/team.jeevanpradaya/ " target="_blank "><img src="../images/fb.png " alt="facebook " style="height:20px; width:20px; "> </img>
@@ -81,12 +82,10 @@
     <a href="https://twitter.com/jeevanpradaya?s=09" target="_blank "><img src="../images/twit.png " alt="twitter " style="height:20px; width:20px; "> </img>
     </a>
     <a href="https://instagram.com/team_jeevanpradaya?igshid=1jqj5xv3a1yq9" target="_blank "><img src="../images/insta.png" alt="you tube " style="height:20px; width:20px; "> </img>
-        <a href="aboutus.html">
+        <a href="http://localgrievance.in:4000/aboutus">
             <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p>
         </a>
 </div>
-<p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p>
-</a>
 </div>
 
 
