--- a/pms/views/vc.ejs
+++ b/pms/views/vc.ejs
@@ -8,7 +8,7 @@
                   background-attachment: fixed;
                   background-size: 100% 100%;
                 }
-                #compform{border: 2px solid rgb(32, 33, 33);padding: 60px 40px;margin-top:50px;-webkit-box-shadow: 4px 2px 37px 10px rgba(32,33,33);
+                #compform{border: 2px solid rgb(32, 33, 33);padding: 60px 40px;margin-top:150px;-webkit-box-shadow: 4px 2px 37px 10px rgba(32,33,33);
 -moz-box-shadow: 4px 2px 37px 10px rgba(32,33,33);
 box-shadow: 4px 2px 37px 10px rgba(32,33,33);}
          .thumb{width :70%; float: left; height:300px ;margin-top:50px; -webkit-box-shadow: 3px 3px 33px 9px rgba(32,33,33);
@@ -52,9 +52,9 @@ h1{color:rgb(18, 121, 14);text-align: center;font-weight: bolder;}
     </div>
 </nav>
       <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-4 col-sm-4 col-xm-12"></div>
-          <div class="col-md-4 col-sm-4 col-xm-12">
+        <div class="row" style="margin-bottom:150px;">
+          <div class="col-md-3 col-sm-3 col-xm-12"></div>
+          <div class="col-md-6 col-sm-6 col-xm-12">
              <form id="compform" action="/ok" method="POST" autocomplete="off">
                <h1 style="margin-bottom: 40px;">Complaint Form</h1>
                <input type="hidden" value="<%= record._id%>">
@@ -139,17 +139,19 @@ h1{color:rgb(18, 121, 14);text-align: center;font-weight: bolder;}
              </form>
             </div>
       </div>
-      <!-- Button trigger modal -->
+   
       <div class="footer">
         <span>Follow Us: </span>
-                         <a href="https://www.facebook.com/team.jeevanpradaya/ " target="_blank "><img src="../images/fb.png " alt="facebook " style="height:20px; width:20px; "> </img>
-                         </a>
-                         <a href="https://twitter.com/jeevanpradaya?s=09" target="_blank "><img src="../images/twit.png " alt="twitter " style="height:20px; width:20px; "> </img>
-                         </a>
-                         <a href="https://instagram.com/team_jeevanpradaya?igshid=1jqj5xv3a1yq9" target="_blank "><img src="../images/insta.png" alt="you tube " style="height:20px; width:20px; "> </img>
-                         <a href="aboutus.html"><p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p></a>
-     </div>    <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p></a>
+        <a href="https://www.facebook.com/team.jeevanpradaya/ " target="_blank "><img src="../images/fb.png " alt="facebook " style="height:20px; width:20px; "> </img>
+        </a>
+        <a href="https://twitter.com/jeevanpradaya?s=09" target="_blank "><img src="../images/twit.png " alt="twitter " style="height:20px; width:20px; "> </img>
+        </a>
+        <a href="https://instagram.com/team_jeevanpradaya?igshid=1jqj5xv3a1yq9" target="_blank "><img src="../images/insta.png" alt="you tube " style="height:20px; width:20px; "> </img>
+            <a href="http://localgrievance.in:4000/aboutus">
+                <p style="color: white;">Designed by TEAM JEEVANPRADAYA &copy; 2020.</p>
+            </a>
     </div>
+ </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
