--- a/pms/views/login.ejs
+++ b/pms/views/login.ejs
@@ -58,7 +58,7 @@
 
     <div class="h-100 text-center align-items-center" style="margin-left:35%;margin-top:20%;">
 
-        <div class="login-form" style="border: solid rgb(252, 109, 109); padding:10px; width:400px;">
+        <div class="login-form" style="border: solid rgb(252, 109, 109); padding:10px; width:400px; margin-bottom: 150px;">
             <form method="POST">
                 <h2 class="text-center" id="login">Log in</h2>
 
