--- a/pms/views/index.ejs
+++ b/pms/views/index.ejs
@@ -359,8 +359,8 @@
     </div>
     </div>
     <div class="wrapper" style="margin-top: 10px;">
-        <a type="button" href="/login" class="btn btn-primary btn-lg" style="margin-right: 0px;">New Complaint</a>
-        <a type="button" href="/login" class="btn btn-primary btn-lg" onclick="window.location.href='#loguser';">Status of Complaint</a>
+        <a type="button" href="/login" class="btn btn-primary btn-lg" style="margin-right: 0px;" onclick="window.location.href='/login';">New Complaint</a>
+        <a type="button" href="/login" class="btn btn-primary btn-lg" onclick="window.location.href='/login';">Status of Complaint</a>
 
     </div>
 
